--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: real_estate_consultants
+name: real_estate
 description: An absolute bare-bones web app.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
